--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,13 +10,15 @@
   {% include "./templates/header.twig" %}
 
   <main class="main">
-    <div class="page__centerer">
-      <h1 class="catalog-title">Каталог продукции</h1>
-      <ul class="products-list">
-        <li class="product-card">
-          <img class="product-card__image" src="img/catalog/chiken500.png" alt="Курица">
-          <div class="product-card__text">
-            <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
+    <div class="catalog-title page__centerer">
+      <h1 class="catalog-title__text">Каталог продукции</h1>
+    </div>
+    <ul class="products-list page__centerer">
+      <li class="product-card">
+        <img class="product-card__image" width="140" height="112" src="img/catalog/chiken500.png" alt="Курица">
+        <div class="product-card__text">
+          <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
+          <div class="product-card__items">
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">500 г</span>
             <span class="product-card__item-name">Вкус</span>
@@ -24,12 +26,14 @@
             <span class="product-card__item-name">Цена</span>
             <span class="product-card__item-value">700 Р.</span>
           </div>
-          <a href="#" class="product-card__button">заказать</a>
-        </li>
-        <li class="product-card">
-          <img class="product-card__image" src="img/catalog/fish1000.png" alt="Курица">
-          <div class="product-card__text">
-            <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
+        </div>
+        <a href="#" class="product-card__button">заказать</a>
+      </li>
+      <li class="product-card">
+        <img class="product-card__image" width="140" height="112" src="./img/catalog/chiken1000.png" alt="Курица">
+        <div class="product-card__text">
+          <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
+          <div class="product-card__items">
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">1000 г</span>
             <span class="product-card__item-name">Вкус</span>
@@ -37,12 +41,14 @@
             <span class="product-card__item-name">Цена</span>
             <span class="product-card__item-value">1000 Р.</span>
           </div>
-          <a href="#" class="product-card__button">заказать</a>
-        </li>
-        <li class="product-card">
-          <img class="product-card__image" src="img/catalog/fish500.png" alt="Рыба">
-          <div class="product-card__text">
-            <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
+        </div>
+        <a href="#" class="product-card__button">заказать</a>
+      </li>
+      <li class="product-card">
+        <img class="product-card__image" width="140" height="112" src="img/catalog/fish500.png" alt="Рыба">
+        <div class="product-card__text">
+          <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
+          <div class="product-card__items">
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">500 г</span>
             <span class="product-card__item-name">Вкус</span>
@@ -50,12 +56,14 @@
             <span class="product-card__item-name">Цена</span>
             <span class="product-card__item-value">700 Р.</span>
           </div>
-          <a href="#" class="product-card__button">заказать</a>
-        </li>
-        <li class="product-card">
-          <img class="product-card__image" src="img/catalog/fish1000.png" alt="Рыба">
-          <div class="product-card__text">
-            <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
+        </div>
+        <a href="#" class="product-card__button">заказать</a>
+      </li>
+      <li class="product-card">
+        <img class="product-card__image" width="140" height="112" src="img/catalog/fish1000.png" alt="Рыба">
+        <div class="product-card__text">
+          <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
+          <div class="product-card__items">
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">1000 г</span>
             <span class="product-card__item-name">Вкус</span>
@@ -63,12 +71,14 @@
             <span class="product-card__item-name">Цена</span>
             <span class="product-card__item-value">1000 Р.</span>
           </div>
-          <a href="#" class="product-card__button">заказать</a>
-        </li>
-        <li class="product-card">
-          <img class="product-card__image" src="img/catalog/buckwheat500.png" alt="Гречка">
-          <div class="product-card__text">
-            <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
+        </div>
+        <a href="#" class="product-card__button">заказать</a>
+      </li>
+      <li class="product-card">
+        <img class="product-card__image" width="140" height="112" src="img/catalog/buckwheat500.png" alt="Гречка">
+        <div class="product-card__text">
+          <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
+          <div class="product-card__items">
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">500 г</span>
             <span class="product-card__item-name">Вкус</span>
@@ -76,12 +86,14 @@
             <span class="product-card__item-name">Цена</span>
             <span class="product-card__item-value">400 Р.</span>
           </div>
-          <a href="#" class="product-card__button">заказать</a>
-        </li>
-        <li class="product-card">
-          <img class="product-card__image" src="img/catalog/buckwheat1000.png" alt="Гречка">
-          <div class="product-card__text">
-            <span class="product-card__title">Cat Energy slim 1000&nbsp;г</span>
+        </div>
+        <a href="#" class="product-card__button">заказать</a>
+      </li>
+      <li class="product-card">
+        <img class="product-card__image" width="140" height="112" src="img/catalog/buckwheat1000.png" alt="Гречка">
+        <div class="product-card__text">
+          <span class="product-card__title">Cat Energy slim 1000&nbsp;г</span>
+          <div class="product-card__items">
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">1000 г</span>
             <span class="product-card__item-name">Вкус</span>
@@ -89,12 +101,14 @@
             <span class="product-card__item-name">Цена</span>
             <span class="product-card__item-value">700 Р.</span>
           </div>
-          <a href="#" class="product-card__button">заказать</a>
-        </li>
-        <li class="product-card">
-          <img class="product-card__image" src="img/catalog/rice500.png" alt="Рис">
-          <div class="product-card__text">
-            <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
+        </div>
+        <a href="#" class="product-card__button">заказать</a>
+      </li>
+      <li class="product-card">
+        <img class="product-card__image" width="140" height="112" src="img/catalog/rice500.png" alt="Рис">
+        <div class="product-card__text">
+          <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
+          <div class="product-card__items">
             <span class="product-card__item-name">Масса</span>
             <span class="product-card__item-value">500 г</span>
             <span class="product-card__item-name">Вкус</span>
@@ -102,16 +116,22 @@
             <span class="product-card__item-name">Цена</span>
             <span class="product-card__item-value">500 Р.</span>
           </div>
-          <a href="#" class="product-card__button">заказать</a>
-        </li>
-        <li class="show-more">
+        </div>
+        <a href="#" class="product-card__button">заказать</a>
+      </li>
+      <li class="show-more">
+        <div class="show-more__text-container">
           <p class="show-more__important-text">Показать еще 100500 товаров</p>
           <p class="show-more__regular-text">На&nbsp;самом деле вкусов гораздо больше!</p>
-          <a href="#" class="show-more__button">показать все</a>
-        </li>
-      </ul>
-      <section class="additional">
-        <h2 class="additional__title">Дополнительные товары</h2>
+        </div>
+        <a href="#" class="show-more__button">показать все</a>
+      </li>
+    </ul>
+
+    <section class="additional">
+      <h2 class="visually-hidden">Дополнительные товары</h2>
+      <p class="additional__title"><span class="additional__title-text">Дополнительные товары</span></p>
+      <div class="additional__structure page__centerer">
         <ul class="additional__products-list">
           <li class="additional__item">
             <span class="additional__item-name">сахарозаменитель</span>
@@ -141,8 +161,9 @@
         <div class="ad">
           <p class="ad__text">Закажите все<br>и&nbsp;получите чехол для<br>кота в&nbsp;подарок!</p>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
+
     {% include "./templates/contacts.twig" %}
   </main>
   {% include "./templates/footer.twig" %}
