micro-grids fix

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -128,10 +128,10 @@
       </li>
     </ul>
 
-    <section class="additional">
+    <section class="additional page__centerer">
       <h2 class="visually-hidden">Дополнительные товары</h2>
       <p class="additional__title"><span class="additional__title-text">Дополнительные товары</span></p>
-      <div class="additional__structure page__centerer">
+      <div class="additional__structure">
         <ul class="additional__products-list">
           <li class="additional__item">
             <span class="additional__item-name">сахарозаменитель</span>
