--- a/source/form.html
+++ b/source/form.html
@@ -42,8 +42,7 @@
             </fieldset>
           </div>
           <fieldset class="inputs-group inputs-group--type_contacts">
-            <p class="inputs-group__group-title"><span class="inputs-group__group-title-text inputs-group__group-title-text--contacts">Контактные данные (владельца кота)</span></p>
-            <legend class="visually-hidden">Контактные данные (владельца кота)</legend>
+            <legend class="inputs-group__group-title"><span class="inputs-group__group-title-text inputs-group__group-title-text--contacts">Контактные данные (владельца кота)</span></legend>
             <div class="inputs-group inputs-group--contacts-container">
               <label class="inputs-group__input-label inputs-group__input-label--email" for="email">
                 E-mail:*
@@ -56,13 +55,11 @@
             </div>
           </fieldset>
             <label class="inputs-group inputs-group--comment-label">
-              <p class="inputs-group__group-title"><span class="inputs-group__group-title-text inputs-group__group-title-text--comment">Комментарий</span></p>
-              <span class="visually-hidden">Комментарий</span>
+              <span class="inputs-group__group-title"><span class="inputs-group__group-title-text inputs-group__group-title-text--comment">Комментарий</span></span>
               <textarea class="inputs-group__comment" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
             </label>
           <fieldset class="inputs-group inputs-group--type_additionals">
-            <p class="inputs-group__group-title inputs-group__group-title--additional"><span class="inputs-group__group-title-text inputs-group__group-title-text--additional">Дополнения</span></p>
-            <legend class="visually-hidden">Дополнения</legend>
+            <legend class="inputs-group__group-title inputs-group__group-title--additional"><span class="inputs-group__group-title-text inputs-group__group-title-text--additional">Дополнения</span></legend>
             <div class="inputs-group__checkbox-container">
               <input class="inputs-group__input-checkbox visually-hidden" id="sugar-substitiute" name="additionals" value="sugar-substitiute" type="checkbox" checked><label class="inputs-group__input-label" for="sugar-substitiute">сахарозаменитель</label>
               <input class="inputs-group__input-checkbox visually-hidden" id="water" name="additionals" value="water" type="checkbox"><label class="inputs-group__input-label" for="water">питьевая вода</label>
